# Ambient-Flow-Orchestrator

./: .gitignore  INSTALL.md  README.md  README_EN.md  build.bat  pyproject.toml  requirements.txt
afo/: __init__.py  analyzer.py  autostart.py  config.py  environment.py  hotkeys.py  main.py  pomodoro.py  reminders.py  server.py  tracker.py
afo/sounds/: .gitkeep
afo/web/: app.js  index.html  style.css
