[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ambient-flow-orchestrator"
version = "1.0.0"
description = "Автоматическая настройка рабочего окружения под текущую задачу"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["productivity", "ambient", "focus", "windows", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pywin32>=306",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=7.0",
]

[project.scripts]
afo = "afo.main:main"

[project.gui-scripts]
afo-gui = "afo.main:main"

[tool.setuptools.packages.find]
include = ["afo*"]

[tool.setuptools.package-data]
"afo.web" = ["*.html", "*.css", "*.js"]
"afo.sounds" = ["*.mp3", "*.ogg", "*.wav"]
